* Add -pthread option in Makefile  * Fixed printf format %d -> %ld warning  * Fixed printf format %X -> %p warning  * Fixed printf format and args mismatch warning  * Add simple README.md file

--- a/linux/Makefile
+++ b/linux/Makefile
@@ -5,7 +5,7 @@ OBJ=$(patsubst %.c,%.o,$(wildcard src/*.c))
 
 INCLUDE+= -I ./include/
 
-LIBS+=-lpthread
+LIBS+=-lpthread -pthread
 
 BUILD_DIR=build
 
